--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,8 @@ li{
 }
 
 img{
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
 }
 
 /* header nav */
@@ -122,22 +122,62 @@ img{
 }
 
 .lists-img-home{
+  width: 500px;
   display: flex;
   align-items: center;
   position: relative;
 }
 
 .lists-img-home li{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  
 }
 
-.list1 img{
-  left: 45%;
-  transform: translate(-45%, -45%);
-  transform: rotate(-30deg);
+.list1{
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  border: solid 2px white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-20deg);
+  transition: all 1s ease-in;
+}
+
+.list1next{
+  border: solid 2px rgb(224, 27, 27);
+  transform: translate(20%, -50%) rotate(20deg)
+}
+
+.list2{
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  border: solid 2px white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(20deg);
+  transition: all 1s ease-in;
+}
+
+.list2next{
+  border: solid 2px white;
+  transform: translate(-120%, -50%) rotate(-20deg)
+}
+
+.list3{
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  border: solid 2px white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(0deg);
+  transition: all 1s ease-in-out;
+}
+
+.list3next{
+  width: 700px;
+  height: 700px;
 }
 
 
