--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ img{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(-20deg);
-  transition: all 1s ease-in;
+  transition: all .7s ease-in-out;
 }
 
 .list1next{
@@ -156,7 +156,7 @@ img{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(20deg);
-  transition: all 1s ease-in;
+  transition: all .7s ease-in-out;
 }
 
 .list2next{
@@ -172,7 +172,7 @@ img{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(0deg);
-  transition: all 1s ease-in-out;
+  transition: all .7s ease-in-out;
 }
 
 .list3next{
