--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ img{
 
 /* header nav */
 
+
 .nav{
   width: 100%;
   height: 100%;
@@ -174,6 +175,204 @@ img{
 .list3next{
   width: 700px;
   height: 700px;
+}
+
+.general-container{
+  background-color: black;
+  height: 100vh;
+  width:100vw ;
+  display: grid;
+  grid-template-columns: 0.78fr 2fr;
+  grid-template-rows: 0.4fr 2fr;
+  gap: 10px;
+  padding: 10px;
+  /* display: grid;
+  grid-template-columns: 420px auto;
+  grid-template-rows: 100px auto;
+  gap: 10px;
+  padding: 10px;
+  position: fixed; */
+
+}
+
+/* Home-menu  */
+.home-menu {
+  /* position: sticky; */
+  color: white;
+  background-color: rgb(17, 17, 17);
+  border-radius: 10px;
+  padding: 10px;
+  display: grid;
+}
+
+.home-menu div{
+  display: flex;
+  gap: 10px;
+  padding: 10px
+}
+
+.bx-home{
+  font-size: 20px;
+}
+
+
+
+/*Search*/
+
+.container-search{
+  border-radius: 10px;
+  grid-row: span 2;
+  background-color:rgb(17, 17, 17);
+  color: white;
+  
+
+}
+
+.search-navbar{
+  position: sticky;
+  top: 0;
+  display: flex;
+  align-items: center;  
+  gap: 8px;
+  padding: 10px;
+  padding-left: 20px;
+  height: 70px;
+
+}
+
+.search-box{
+  
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 5px;
+  border-radius: 10px;
+  padding-left: 10px;
+  border: none;
+  background-color: rgb(47, 47, 47);
+  height: 40px;
+  width: 300px;
+  color: gray;
+  font-size: 20px;
+  }
+.search-box input{
+
+  background-color: transparent;
+  border: none;
+  padding: 10px;
+  width: 300px;
+  border-radius: 20px;
+  padding-left: 20px;
+}
+
+.search-box i{
+  position: absolute;
+}
+
+
+.nav-buttom{
+  
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  font-size: 30px;
+  background-color: black;
+  color: white;
+  }
+
+  .install-buttom {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    gap: 5px;
+    color: white;
+    background-color: black;
+    padding: 5px;
+    border-radius: 20px;
+    right: 90px;
+  }
+  
+.bx-down-arrow-circle{
+  font-size: 20px;
+}
+.news-buttom{
+  background-color: black;
+  font-size: 15px;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  color: white;
+  position: absolute;
+  right: 50px;
+
+}
+.user-photo{
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  background-color: black;
+  border-radius: 50%;
+  right: 10px;
+}
+
+.explore-content{
+  font-weight:bold;
+  padding-left: 20px;
+  margin-top: 10px;
+  font-size:x-large;
+}
+
+.library-box{
+  color: white;
+  background-color: rgb(17, 17, 17);
+  display: grid;
+  grid-template-rows: auto 1fr;
+  /* bottom: 30px; */
+ 
+  /* position: absolute; */
+  border-radius: 10px;
+  padding: 10px;
+
+}
+
+.library-nav{
+ 
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 5px;
+  align-items: center;
+}
+
+.bx-plus{
+  
+  position: relative;
+  margin-left: auto;
+  font-size: 20px;
+}
+
+.bx-right-arrow-alt{
+  
+
+  font-size: 25px;
+}
+
+.library-buttons{
+  display: flex;
+  gap: 5px;
+  padding: 5px;
+}
+.library-buttons li{
+  background-color: rgb(35, 35, 35);
+  border-radius: 20px;
+  padding: 5px;
+  padding-left: 8px;
+  padding-right: 8px;
+
+}
+.library-buttons li:hover{
+  background-color: rgb(44, 44, 44);
+  cursor: pointer;
 }
 
 
