agregando sobras para que cuando pase el cursor de ilumine la zona afectada

--- a/src/App.css
+++ b/src/App.css
@@ -317,5 +317,13 @@ img{
   border-bottom: solid 1px #2f3030;
 }
 
+.shade-grid-background{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+}
 
 
